--- a/debian/module/debian/control.template.in
+++ b/debian/module/debian/control.template.in
@@ -9,7 +9,7 @@ Homepage: http://www.nvidia.com/
 
 Package: nvidia-kernel#LEGACY#-#KVERS#
 Architecture: i386 amd64
-Provides: nvidia-kernel#LEGACY#-#VERSION#
+Provides: nvidia-kernel-#VERSION#
 Depends: nvidia-kernel-common (>= 20100522)
 Recommends: linux-image-#KVERS#
 Description: NVIDIA binary kernel module for Linux #KVERS#
