--- a/debian/control
+++ b/debian/control
@@ -113,7 +113,7 @@ Provides:
 Conflicts:
  libgl1-nvidia-glx,
  fglrx-glx,
- nvidia-glx${nvidia:Legacy} (<< 195.36.31),
+ nvidia-glx (<< 195.36.31),
  nvidia-glx-legacy,
  nvidia-glx-legacy-71xx,
  nvidia-glx-legacy-96xx,
@@ -146,7 +146,7 @@ Provides:
 Conflicts:
  libgl1-nvidia-glx-ia32,
  fglrx-glx-ia32,
- nvidia-glx${nvidia:Legacy}-ia32 (<< 195.36.31),
+ nvidia-glx-ia32 (<< 195.36.31),
  nvidia-glx-legacy-ia32,
  nvidia-glx-legacy-71xx-ia32,
  nvidia-glx-legacy-96xx-ia32,
@@ -175,7 +175,7 @@ Provides:
  libgl1-nvidia-dev,
 Conflicts:
  libgl1-nvidia-dev,
- nvidia-glx${nvidia:Legacy}-dev (<< 195.36.31),
+ nvidia-glx-dev (<< 195.36.31),
  nvidia-glx-legacy-dev,
  nvidia-glx-legacy-71xx-dev,
  nvidia-glx-legacy-96xx-dev,
