--- a/debian/control
+++ b/debian/control
@@ -49,9 +49,7 @@ Description: NVIDIA binary Xorg driver${nvidia:LegacyDesc}
  for building the kernel module required by this package.
  This will provide nvidia-kernel-${nvidia:Version}${nvidia:Perfkit}.
  .
- This version only supports GeForce 6xxx and higher of the Geforce GPUs
- plus complimentary Quadros and nforce.  Look at the legacy packages
- for older cards.
+ ${nvidia:Models}
  .
  See /usr/share/doc/nvidia-glx${nvidia:Legacy}/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
@@ -80,9 +78,7 @@ Description: NVIDIA binary driver 32-bit libs${nvidia:LegacyDesc}
  OpenGL applications via a direct-rendering X Server.
  AGP, PCIe, SLI, TV-out and flat panel displays are also supported.
  .
- This version only supports GeForce 6xxx and higher of the Geforce GPUs
- plus complimentary Quadros and nforce.  Look at the legacy packages
- for older cards.
+ ${nvidia:Models}
  .
  See /usr/share/doc/nvidia-glx${nvidia:Legacy}/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
@@ -123,11 +119,8 @@ Description: NVIDIA binary OpenGL libraries${nvidia:LegacyDesc}
  These binary libraries provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server.
  .
- This version only supports GeForce 6xxx and higher of the Geforce GPUs
- plus complimentary Quadros and nforce.  Look at the legacy packages
- for older cards.
- .
- See /usr/share/doc/libgl1-nvidia${nvidia:Legacy}-glx/README.txt.gz
+ See the description of the nvidia-glx${nvidia:Legacy} package
+ or /usr/share/doc/libgl1-nvidia${nvidia:Legacy}-glx/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
 
 Package: libgl1-nvidia-glx-ia32
@@ -156,11 +149,8 @@ Description: NVIDIA binary OpenGL 32-bit libraries${nvidia:LegacyDesc}
  These binary 32-bit libraries provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server.
  .
- This version only supports GeForce 6xxx and higher of the Geforce GPUs
- plus complimentary Quadros and nforce.  Look at the legacy packages
- for older cards.
- .
- See /usr/share/doc/libgl1-nvidia${nvidia:Legacy}-glx/README.txt.gz
+ See the description of the nvidia-glx${nvidia:Legacy} package
+ or /usr/share/doc/libgl1-nvidia${nvidia:Legacy}-glx/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
 
 Package: libgl1-nvidia-dev
@@ -216,9 +206,10 @@ Description: NVIDIA binary kernel module DKMS source${nvidia:LegacyDesc}
  using NVIDIA chip sets.  AGP, PCIe, SLI, TV-out and flat panel displays
  are also supported.
  .
- This version only supports GeForce 6xxx and higher of the Geforce GPUs
- plus complimentary Quadros and nforce.  Look at the legacy packages for
- older cards.
+ ${nvidia:Models}
+ .
+ See /usr/share/doc/nvidia-kernel${nvidia:Legacy}-dkms/README.txt.gz
+ for a complete list of supported GPUs and PCI IDs.
 
 Package: nvidia-kernel-source
 Section: non-free/kernel
@@ -237,9 +228,7 @@ Description: NVIDIA binary kernel module source${nvidia:LegacyDesc}
  using NVIDIA chip sets.  AGP, PCIe, SLI, TV-out and flat panel displays
  are also supported.
  .
- This version only supports GeForce 6xxx and higher of the Geforce GPUs
- plus complimentary Quadros and nforce.  Look at the legacy packages for
- older cards.
+ ${nvidia:Models}
  .
  PLEASE read /usr/share/doc/nvidia-kernel${nvidia:Legacy}-source/README.Debian.gz
  for building information.  If you want the kernel module to be automatically
