new nvidia.ids handling, extract it from nv-kernel.o
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1371 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -52,19 +52,18 @@ unpack-stamp: ${filename_x86} ${filename_x86_64}
 	ls -al
 	touch $@
 
-nvidia.ids: unpack-stamp
-	sed -e '0,/A. Supported\|APPENDIX A: SUPPORTED/d' \
-	    -e '0,/Appendix A. Supported\|APPENDIX A: SUPPORTED/d' \
-	    -e '0,/^Below\|APPENDIX B/{/ 0x/s/.* 0x\([0-9a-fA-F]\{4\}\).*/10DE\1/p};d' \
-		NVIDIA-Linux/usr/share/doc/README.txt \
+nv-kernel.ids: unpack-stamp
+	sh debian/extract-pci-ids.sh NVIDIA-Linux/usr/src/nv/nv-kernel.o \
 		| tr a-f A-F | sort -u > $@
 	@set -e -x ; \
-	if ! cmp -s debian/nvidia.ids nvidia.ids ; then \
-		diff -u debian/nvidia.ids nvidia.ids || true ; \
+	if ! cmp -s debian/nv-kernel.ids nv-kernel.ids ; then \
+		diff -u debian/nv-kernel.ids nv-kernel.ids || true ; \
 		: "*** Supported PCI IDs have changed. See diff above. Aborting. ***"; \
 		exit 1 ; \
 	fi
 
+nvidia.ids: nv-kernel.ids
+	cp $< $@
 
 .PHONY: binary binary-arch binary-indep build clean install
 binary binary-arch binary-indep build clean install:
@@ -75,7 +74,7 @@ override_dh_auto_clean:
 	rm -fr $(dirname_x86) $(dirname_x86_64)
 	rm -fr debian/temp
 	rm -fr kernel-source-tree
-	rm -f nvidia.ids
+	rm -f nvidia.ids nv-kernel.ids pci.ids.nvidia*
 
 override_dh_clean:
 	dh_clean
@@ -216,8 +215,27 @@ debian/module/debian/changelog: debian/changelog
 
 # only invoked manually
 %.txt: %.list
-	sed -e 's/ /#/g; s/#*$$/,/; $$ s/,$$//' $< | ( tr '\n' ' '; echo ) \
-		| fold -s -w 78 | sed -e 's/#/ /g; s/^/ /; s/ *$$//' > $@
+	cat $< \
+	| sed -e 's/^10DE.... *//; /^$$/d' \
+	| uniq \
+	| sed -e 's/ /#/g; s/#*$$/,/; $$ s/,$$/./' \
+	| ( tr '\n' ' '; echo ) \
+	| fold -s -w 78 \
+	| sed -e 's/#/ /g; s/ *$$//' > $@
+
+# only invoked manually
+pci.ids.nvidia: /usr/share/misc/pci.ids
+	sed -nr '/^10de/,/^10df/ { /^\t\t/d; /\t/ { s/  (.*) \[(.*)\]$$/  \2 [\1]/; s/^\t/10de/; p} }' $< > $@.tmp
+	cut -c 1-8 $@.tmp | tr a-f A-F > $@.tmp1
+	cut -c 9- $@.tmp | paste -d '' $@.tmp1 - > $@
+	$(RM) $@.tmp $@.tmp1
+
+# only invoked manually
+%.names: %.ids pci.ids.nvidia
+	cat $< | \
+	while read id ; do \
+		grep ^$$id pci.ids.nvidia || echo $$id ; \
+	done > $@
 
 # Renaming control files for legacy packaging
 ifneq (,$(legacy))
