--- a/debian/nvidia-glx.install.in
+++ b/debian/nvidia-glx.install.in
@@ -1,4 +1,4 @@
 usr/bin/nvidia-bug-report.sh
 usr/X11R6/lib/modules/drivers/nvidia_drv.so		usr/lib/xorg/modules/drivers/
 usr/X11R6/lib/modules/extensions/libglx.so.#VERSION#	usr/lib/xorg/modules/extensions/
-debian/nvidia.ids					usr/share/xserver-xorg/pci/
+nvidia.ids						usr/share/xserver-xorg/pci/
