Install libGL.so* in /usr/lib{,32}/nvidia/
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1398 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx.install.in
+++ b/debian/libgl1-nvidia-glx.install.in
@@ -1,4 +1,4 @@
-usr/lib/libGL.so.#VERSION#
+usr/lib/libGL.so.#VERSION#				usr/lib/nvidia/
 usr/lib/libGLcore.so.#VERSION#
 usr/lib/libnvidia-cfg.so.#VERSION#
 usr/lib/libnvidia-tls.so.#VERSION#
