--- a/debian/libgl1-nvidia-glx.links.in
+++ b/debian/libgl1-nvidia-glx.links.in
@@ -1,4 +1,4 @@
-usr/lib/libGL.so.#VERSION#				usr/lib/libGL.so.1
+usr/lib/nvidia/libGL.so.#VERSION#			usr/lib/nvidia/libGL.so.1
 usr/lib/libGLcore.so.#VERSION#				usr/lib/libGLcore.so.1
 usr/lib/libnvidia-cfg.so.#VERSION#			usr/lib/libnvidia-cfg.so.1
 usr/lib/libnvidia-tls.so.#VERSION#			usr/lib/libnvidia-tls.so.1
