--- a/debian/control
+++ b/debian/control
@@ -98,6 +98,7 @@ Package: libgl1-nvidia-glx
 Section: non-free/libs
 Architecture: i386 amd64
 Depends:
+ libgl1-nvidia-alternatives,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
  nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
@@ -128,6 +129,7 @@ Section: non-free/libs
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
 Depends:
+ libgl1-nvidia-alternatives-ia32,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
  nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
@@ -552,4 +554,32 @@ Description: NVIDIA OpenCL development files
  .
  This package contains the development files for the installable client driver
  loader (ICD Loader) library provided by NVIDIA.
+
+Package: libgl1-nvidia-alternatives
+Section: non-free/libs
+Architecture: i386 amd64
+Depends: ${misc:Depends}
+Breaks:
+ nvidia-glx (<< 195.36.31-2), libgl1-nvidia-glx-ia32 (<< 195.36.31-2),
+ nvidia-glx-legacy-71xx (<< 71.86.13-2),
+ nvidia-glx-legacy-96xx (<< 96.43.17),
+ nvidia-glx-legacy-173xx (<< 173.14.25-3),
+Description: simplify replacing the MESA libGL.so* with GPU vendor implementations
+ Diverts the free libGL.so implementation (MESA) and introduces
+ alternatives to simplify plugging in accelerated implementations from GPU
+ vendors.  Handles both libGL.so.1 and libGL.so.
+
+Package: libgl1-nvidia-alternatives-ia32
+Section: non-free/libs
+Architecture: amd64
+Depends: ${misc:Depends}
+Breaks:
+ nvidia-glx-ia32 (<< 195.36.31-2), libgl1-nvidia-glx-ia32 (<< 195.36.31-2),
+ nvidia-glx-legacy-71xx-ia32 (<< 71.86.13-2),
+ nvidia-glx-legacy-96xx-ia32 (<< 96.43.17),
+ nvidia-glx-legacy-173xx-ia32 (<< 173.14.25-3),
+Description: simplify replacing the MESA libGL.so* with GPU vendor implementations (32-bit)
+ Diverts the free libGL.so (32-bit) implementation (MESA) and introduces
+ alternatives to simplify plugging in accelerated implementations from GPU
+ vendors.  Handles both libGL.so.1 and libGL.so.
 
