Shorten short descriptions for libgl1-nvidia-alternatives*
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1416 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -564,7 +564,7 @@ Breaks:
  nvidia-glx-legacy-71xx (<< 71.86.13-2),
  nvidia-glx-legacy-96xx (<< 96.43.17),
  nvidia-glx-legacy-173xx (<< 173.14.25-3),
-Description: simplify replacing the MESA libGL.so* with GPU vendor implementations
+Description: simplifies replacing MESA libGL with GPU vendor libraries
  Diverts the free libGL.so implementation (MESA) and introduces
  alternatives to simplify plugging in accelerated implementations from GPU
  vendors.  Handles both libGL.so.1 and libGL.so.
@@ -578,7 +578,7 @@ Breaks:
  nvidia-glx-legacy-71xx-ia32 (<< 71.86.13-2),
  nvidia-glx-legacy-96xx-ia32 (<< 96.43.17),
  nvidia-glx-legacy-173xx-ia32 (<< 173.14.25-3),
-Description: simplify replacing the MESA libGL.so* with GPU vendor implementations (32-bit)
+Description: simplifies replacing MESA libGL with GPU vendor libraries (32-bit)
  Diverts the free libGL.so (32-bit) implementation (MESA) and introduces
  alternatives to simplify plugging in accelerated implementations from GPU
  vendors.  Handles both libGL.so.1 and libGL.so.
