--- a/debian/nvidia-glx.links.in
+++ b/debian/nvidia-glx.links.in
@@ -1,1 +1,1 @@
-usr/lib/xorg/modules/extensions/libglx.so.#VERSION#	usr/lib/xorg/modules/extensions/libglx.so
+usr/lib/nvidia/libglx.so.#VERSION#	usr/lib/nvidia/libglx.so
