nvidia-kernel-{dkms,source}: add Conflicts: with badly sorting obsolete packages linux-{image,headers}-2.6.32-trunk-*.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1426 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -196,7 +196,14 @@ Provides:
  nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
 Conflicts:
  nvidia-kernel-dkms,
- binutils-gold (>> 2.20.51)
+ linux-headers-2.6.32-trunk-486 [i386], linux-image-2.6.32-trunk-486 [i386],
+ linux-headers-2.6.32-trunk-686 [i386], linux-image-2.6.32-trunk-686 [i386],
+ linux-headers-2.6.32-trunk-686-bigmem [i386], linux-image-2.6.32-trunk-686-bigmem [i386],
+ linux-headers-2.6.32-trunk-amd64, linux-image-2.6.32-trunk-amd64,
+ linux-headers-2.6.32-trunk-vserver-686 [i386], linux-image-2.6.32-trunk-vserver-686 [i386],
+ linux-headers-2.6.32-trunk-vserver-686-bigmem [i386], linux-image-2.6.32-trunk-vserver-686-bigmem [i386],
+ linux-headers-2.6.32-trunk-vserver-amd64 [amd64], linux-image-2.6.32-trunk-vserver-amd64 [amd64],
+ binutils-gold (>> 2.20.51),
 Description: NVIDIA binary kernel module DKMS source${nvidia:LegacyDesc}
  This package builds the NVIDIA Xorg binary kernel module needed by
  nvidia-glx${nvidia:Legacy}, using DKMS.
@@ -220,7 +227,15 @@ Architecture: i386 amd64
 Depends: ${misc:Depends}, debhelper (>= 8), make, quilt (>= 0.46-7~)
 Recommends: module-assistant | kernel-package,
  nvidia-glx${nvidia:Legacy} (>= ${nvidia:Version}), nvidia-kernel-common
-Conflicts: binutils-gold (>> 2.20.51)
+Conflicts:
+ linux-headers-2.6.32-trunk-486 [i386], linux-image-2.6.32-trunk-486 [i386],
+ linux-headers-2.6.32-trunk-686 [i386], linux-image-2.6.32-trunk-686 [i386],
+ linux-headers-2.6.32-trunk-686-bigmem [i386], linux-image-2.6.32-trunk-686-bigmem [i386],
+ linux-headers-2.6.32-trunk-amd64, linux-image-2.6.32-trunk-amd64,
+ linux-headers-2.6.32-trunk-vserver-686 [i386], linux-image-2.6.32-trunk-vserver-686 [i386],
+ linux-headers-2.6.32-trunk-vserver-686-bigmem [i386], linux-image-2.6.32-trunk-vserver-686-bigmem [i386],
+ linux-headers-2.6.32-trunk-vserver-amd64 [amd64], linux-image-2.6.32-trunk-vserver-amd64 [amd64],
+ binutils-gold (>> 2.20.51),
 Description: NVIDIA binary kernel module source${nvidia:LegacyDesc}
  This package provides the source for the NVIDIA Xorg binary kernel module
  needed by nvidia-glx${nvidia:Legacy} in a form suitable
