Add libxvmc1 to Build-Depends.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1456 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends:
  bzip2,
  dkms (>= 2.1.1.1),
  libxext6,
+ libxvmc1,
  quilt,
  ia32-libs (>= 20090804) [amd64],
 Standards-Version: 3.9.1
