--- a/debian/libgl1-nvidia-glx.install.in
+++ b/debian/libgl1-nvidia-glx.install.in
@@ -1,5 +1,5 @@
 usr/lib/libGL.so.#VERSION#				usr/lib/nvidia/
-usr/lib/libGLcore.so.#VERSION#
+libnvidia-glcore.so.#VERSION#		usr/lib/
 usr/lib/libnvidia-cfg.so.#VERSION#
 usr/lib/libnvidia-tls.so.#VERSION#
 usr/lib/tls/libnvidia-tls.so.#VERSION#
